<resources>
    <string name="app_name">PwdGigs</string>
    <string name="no_description" />
    <string name="pwdgigs_logo">PwdGigs Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">johndoe@gmail.com</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="google_text">Google</string>
    <string name="facebook_text">Facebook</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="or_sign_up_with_text">or sign up with</string>
    <string name="already_have_an_account_text">Already Have an Account?</string>
    <string name="firstname_text">Firstname</string>
    <string name="lastname_text">Lastname</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="terms_and_conditions_text">Terms and Conditions</string>
    <string name="i_agree_to_text">I Agree to</string>
    <string name="welcome_message">Welcome Samuel Juma!</string>
    <string name="pwdgigs_short_info">PwdGigs is a technology company that bridges the gap between independent talent with disabilities and inclusive employers.</string>
    <string name="what_to_do_text">What to do?</string>
    <string name="what_to_do_info_text">You could either get a gig, post a gig or support us</string>
    <string name="post_gig_text">Post Gig</string>
    <string name="get_gig_text">Get Gig</string>
    <string name="support_text">Support</string>
</resources>