<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_background"
            tools:context=".ui.SignUpActivity">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/logo_height"
                android:layout_height="@dimen/logo_height"
                android:contentDescription="@string/pwdgigs_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024"
                app:srcCompat="@drawable/ic_logo_without_fill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_space"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/theme_color_2"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/first_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_space"
                    android:background="@drawable/modified_edit_text_sign_up"
                    android:drawableStart="@drawable/ic_baseline_person_outline"
                    android:drawablePadding="@dimen/small_space"
                    android:ems="10"
                    android:hint="@string/firstname_text"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/min_edit_text_height"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/last_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_space"
                    android:background="@drawable/modified_edit_text_sign_up"
                    android:drawableStart="@drawable/ic_baseline_person_outline"
                    android:drawablePadding="@dimen/small_space"
                    android:ems="10"
                    android:hint="@string/lastname_text"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/min_edit_text_height"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_space"
                    android:background="@drawable/modified_edit_text_sign_up"
                    android:drawableStart="@drawable/ic_baseline_email"
                    android:drawablePadding="@dimen/small_space"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/min_edit_text_height"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_space"
                    android:background="@drawable/modified_edit_text_sign_up"
                    android:drawableStart="@drawable/ic_baseline_security"
                    android:drawablePadding="@dimen/small_space"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="@dimen/medium_m_space"
                    android:paddingEnd="@dimen/medium_m_space"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/confirm_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_space"
                    android:background="@drawable/modified_edit_text_sign_up"
                    android:drawableStart="@drawable/ic_baseline_security"
                    android:drawablePadding="@dimen/small_space"
                    android:ems="10"
                    android:hint="@string/confirm_password_text"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="@dimen/medium_m_space"
                    android:paddingEnd="@dimen/medium_m_space"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_space">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyCheckBox"
                        android:textColor="@color/theme_color_2"
                        android:textStyle="bold"
                        android:minHeight="48dp"
                        android:textSize="@dimen/medium_text_size"
                        android:text="@string/i_agree_to_text" />

                    <TextView
                        android:layout_marginStart="@dimen/very_small_space"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_conditions_text"
                        android:textColor="@color/theme_color_1"
                        android:textSize="@dimen/medium_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sign_up_btn_bg"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_m_text_size"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/very_large_space"
                    android:layout_marginTop="@dimen/medium_space"
                    android:layout_marginEnd="@dimen/very_large_space"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="2"
                        android:background="@color/theme_color_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_space"
                        android:layout_marginEnd="@dimen/small_space"
                        android:layout_weight="0"
                        android:text="@string/or_sign_up_with_text"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/theme_color_2"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="2"
                        android:background="@color/theme_color_1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_space"
                    android:layout_marginTop="@dimen/very_small_space"
                    android:layout_marginEnd="@dimen/medium_space"
                    android:gravity="center"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/small_space"
                        android:layout_weight="1"
                        android:background="@drawable/facebook_btn_bg_sign_up"
                        android:drawableStart="@drawable/ic_facebook"
                        android:drawablePadding="@dimen/small_space"
                        android:text="@string/facebook_text"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/theme_color_1"
                        android:textSize="@dimen/medium_text_size"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/small_space"
                        android:layout_weight="1"
                        android:background="@drawable/google_btn_bg_sign_up"
                        android:drawableStart="@drawable/ic_google"
                        android:drawablePadding="@dimen/small_space"
                        android:text="@string/google_text"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/theme_color_2"
                        android:textSize="@dimen/medium_text_size"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_space"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/very_large_space">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account_text"
                        android:textColor="@color/theme_color_1"
                        android:textSize="@dimen/small_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sign_in_redirect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/very_small_space"
                        android:text="@string/sign_in"
                        android:textColor="@color/theme_color_2"
                        android:textSize="@dimen/small_text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
